--- a/main.tex
+++ b/main.tex
@@ -63,70 +63,58 @@
 
 \begin{document}
 
-\chapter*{Anexo I – Proposta Comercial para o Período de 90 (noventa) dias}
-\addcontentsline{toc}{chapter}{Anexo I – Proposta Comercial para o Período de 90 (noventa) dias}
+    \chapter*{Anexo I – Proposta Comercial para o Período de 90 (noventa) dias}
+    \addcontentsline{toc}{chapter}{Anexo I – Proposta Comercial para o Período de 90 (noventa) dias}
 
-\section*{1. Objetivo}
+    \section*{1. Objetivo}
 
-Este anexo apresenta a estimativa de custos para a fase inicial do projeto, correspondente a 90 (noventa) dias de execução do pré-projeto do \gls{gpf}. Para efeito de estimativa, consideramos início em 02 de junho de 2025. Esses valores podem variar proporcionalmente caso a data de início seja diferente, uma vez que a cobrança de terceiros é feita por hora trabalhada.
+    Este anexo apresenta a estimativa de custos para a fase inicial do projeto, correspondente a 90 (noventa) dias de execução do pré-projeto do \gls{gpf}. Para efeito de estimativa, considerou-se uma carga de trabalho equivalente a \textbf{66 dias úteis}, estimados com base em um período de três meses típicos de trabalho, descontando feriados e finais de semana, o que permite estimar os custos com base em horas previstas de dedicação por perfil profissional. Os valores podem variar proporcionalmente caso haja alteração na quantidade de dias úteis efetivamente trabalhados, uma vez que a cobrança de terceiros é feita por hora trabalhada.
 
-\section*{2. Disposições Gerais}
+    \section*{2. Disposições Gerais}
 
-Os cargos previstos nesta fase poderão ser ocupados por profissionais das fundações \gls{fundep} e \gls{fiotec} ou, conforme necessidade e disponibilidade interna, por meio da contratação de terceiros. Os valores aqui apresentados servem como base de planejamento e poderão variar de acordo com as condições específicas de contratação, observando os intervalos informados.
+    Os cargos previstos nesta fase poderão ser ocupados por profissionais das fundações \gls{fundep} e \gls{fiotec} ou, conforme necessidade e disponibilidade interna, por meio da contratação de terceiros. Os valores aqui apresentados servem como base de planejamento e poderão variar de acordo com as condições específicas de contratação, observando os intervalos informados.
 
-As cargas horárias foram calculadas com base nos \textbf{64 dias úteis} correspondentes ao período de \textbf{02 de junho de 2025 a 29 de agosto de 2025}, segundo o calendário de \textbf{Belo Horizonte (MG)}, considerando a semana de \textbf{segunda à sexta}, descontando os feriados de 19/06 (Corpus Christi – ponto facultativo) e 15/08 (Assunção de Nossa Senhora).
+    \section*{3. Estimativa de Carga e Valores}
 
-\section*{3. Estimativa de Custos por Cargo}
+    A Tabela \ref{tab:carga-e-valores} apresenta a composição da equipe prevista para a fase do pré-projeto do \gls{gpf}, com a carga horária individual, forma de alocação e valores estimados para os profissionais terceirizados. Os valores apresentados referem-se exclusivamente aos profissionais terceirizados e servem como base para planejamento orçamentário desta etapa do projeto.
 
-\begin{table}[H]
-    \centering
-    \small
-    \resizebox{\textwidth}{!}{
-        \begin{tabular}{@{}llrrrr@{}}
-            \toprule
-            \textbf{Cargo} & \textbf{Qtde} & \textbf{Horas} & \textbf{Valor Hora (R\$)} & \textbf{Custo Mínimo (R\$)} & \textbf{Custo Máximo (R\$)} \\
-            \midrule
-            Coordenador de Projeto & 1 & 512 & 89 -- 182 & 45.568,00 & 93.184,00 \\
-            Subcoordenadores de Projeto & 2 & 512 & 89 -- 182 & 91.136,00 & 186.368,00 \\
-            Consultor Técnico Sênior & 1 & 48 & 400 & 19.200,00 & 19.200,00 \\
-            Product Owner / Analista de Negócio & 7 & 512 & 112 -- 168 & 400.384,00 & 600.576,00 \\
-            UX/UI Designer & 1 & 256 & 57 -- 135 & 14.592,00 & 34.560,00 \\
-            Arquiteto de Software & 2 & 256 & 135 -- 200 & 69.120,00 & 102.400,00 \\
-            Documentador & 1 & 512 & 75 -- 178 & 38.400,00 & 91.136,00 \\
-            Representantes do Negócio & 30 & 256 & — & — & — \\
-            \bottomrule
-        \end{tabular}
-    }
-    \caption{Estimativa de Custo por Cargo}
-    \label{tab:estimado-por-cargo}
-\end{table}
+    \begin{table}[H]
+        \centering
+        \small
+        \resizebox{\textwidth}{!}{
+            \begin{tabular}{@{}p{4.5cm}cclrrr@{}}
+                \toprule
+                \textbf{Cargo} & \textbf{Qtde} & \textbf{Horas} & \textbf{Alocação} & \textbf{R\$ Min.} & \textbf{R\$ Máx.} & \textbf{R\$ Custo Máx.} \\
+                \midrule
+                Coordenador de Projeto              & 1  & 80  & \gls{fundep}     & --     & --     & --         \\
+                Subcoordenador de Projeto           & 1  & 528 & \gls{fiotec}     & --     & --     & --         \\
+                Subcoordenador de Projeto           & 1  & 198 & \gls{fundep}     & --     & --     & --         \\
+                Consultor Técnico Sênior            & 1  & 80  & Terceirizado & 400,00 & 400,00 & 32.000,00  \\
+                Product Owner / Analista de Negócio & 2  & 528 & \gls{fiotec}     & --     & --     & --         \\
+                Product Owner / Analista de Negócio & 5  & 528 & Terceirizado & 112,00 & 168,00 & 443.520,00 \\
+                UX/UI Designer                      & 1  & 528 & Terceirizado & 57,00  & 135,00 & 71.280,00  \\
+                Arquiteto de Software               & 1  & 528 & \gls{fiotec}     & --     & --     & --         \\
+                Arquiteto de Software               & 1  & 528 & Terceirizado & 135,00 & 200,00 & 105.600,00 \\
+                Documentador                        & 1  & 528 & Terceirizado & 75,00  & 178,00 & 93.984,00  \\
+                Representantes do Negócio           & 15 & 198 & \gls{fundep}     & --     & --     & --         \\
+                Representantes do Negócio           & 15 & 198 & \gls{fiotec}     & --     & --     & --         \\
+                \bottomrule
+            \end{tabular}
+        }
+        \caption{Composição da equipe, carga horária por pessoa e estimativas de custo para profissionais terceirizados.}
+        \label{tab:carga-e-valores}
+    \end{table}
 
-\section*{4. Totais Estimados}
+    O valor máximo estimado para esta fase inicial do projeto é de \textbf{R\$ 746.384,00}, correspondente ao custo direto da contratação de profissionais terceirizados conforme as funções e cargas horárias previstas.
 
-A Tabela \ref{tab:totais-estimados} apresenta o custo total estimado para os 90 dias de pré-projeto, considerando que todos os profissionais listados serão contratados como terceiros (100\% contratação terceirizada). Esses valores contemplam apenas o custo direto com as horas de trabalho e não incluem encargos adicionais (administrativos, tributos, gestão de contrato, etc.), que deverão ser negociados separadamente entre as fundações.
+    \textbf{Não estão incluídos nesse valor encargos indiretos}, tais como administração, tributos, gestão contratual e eventuais despesas operacionais, que deverão ser definidos em tratativas futuras entre as partes envolvidas.
 
-\begin{table}[H]
-    \centering
-    \small
-    \resizebox{\textwidth}{!}{
-        \begin{tabular}{@{}p{6.5cm}cc@{}}
-            \toprule
-            \textbf{Tipo de Custo} & \textbf{Valor Total Mínimo (R\$)} & \textbf{Valor Total Máximo (R\$)} \\
-            \midrule
-            Custo Estimado & \textbf{678.400,00} & \textbf{1.127.424,00} \\
-            \bottomrule
-        \end{tabular}
-    }
-    \caption{Totais estimados de custo considerando 100\% de contratação terceirizada.}
-    \label{tab:totais-estimados}
-\end{table}
+    \section*{4. Observações}
 
-\section*{5. Observações}
-
-\begin{itemize}
-    \item A composição final das equipes será definida em comum acordo entre as fundações, podendo sofrer ajustes ao longo da execução.
-    \item Os representantes do negócio são colaboradores internos das fundações e não gerarão custos diretos nesta etapa.
-\end{itemize}
+    \begin{itemize}
+        \item A composição final da equipe será definida em comum acordo entre \gls{fundep} e \gls{fiotec}, podendo sofrer ajustes ao longo da execução conforme necessidades operacionais.
+        \item Os representantes do negócio atuarão como usuários-chave das áreas envolvidas e não gerarão custos diretos nesta fase, por serem profissionais das próprias fundações.
+    \end{itemize}
 
 
 \end{document}
