Atualiza tabela de custos e reformula descrição do valor estimado para a fase inicial do projeto.

--- a/main.tex
+++ b/main.tex
@@ -82,22 +82,22 @@
         \centering
         \small
         \resizebox{\textwidth}{!}{
-            \begin{tabular}{@{}p{4.5cm}cclrrr@{}}
+            \begin{tabular}{@{}p{4.5cm}cclrr@{}}
                 \toprule
-                \textbf{Cargo} & \textbf{Qtde} & \textbf{Horas} & \textbf{Alocação} & \textbf{R\$ Min.} & \textbf{R\$ Máx.} & \textbf{R\$ Custo Máx.} \\
+                \textbf{Cargo} & \textbf{Qtde} & \textbf{Horas} & \textbf{Alocação} & \textbf{Custo Hora (R\$)} & \textbf{Custo Total (R\$)} \\
                 \midrule
-                Coordenador de Projeto              & 1  & 80  & \gls{fundep}     & --     & --     & --         \\
-                Subcoordenador de Projeto           & 1  & 528 & \gls{fiotec}     & --     & --     & --         \\
-                Subcoordenador de Projeto           & 1  & 198 & \gls{fundep}     & --     & --     & --         \\
-                Consultor Técnico Sênior            & 1  & 80  & Terceirizado & 400,00 & 400,00 & 32.000,00  \\
-                Product Owner / Analista de Negócio & 2  & 528 & \gls{fiotec}     & --     & --     & --         \\
-                Product Owner / Analista de Negócio & 5  & 528 & Terceirizado & 112,00 & 168,00 & 443.520,00 \\
-                UX/UI Designer                      & 1  & 528 & Terceirizado & 57,00  & 135,00 & 71.280,00  \\
-                Arquiteto de Software               & 1  & 528 & \gls{fiotec}     & --     & --     & --         \\
-                Arquiteto de Software               & 1  & 528 & Terceirizado & 135,00 & 200,00 & 105.600,00 \\
-                Documentador                        & 1  & 528 & Terceirizado & 75,00  & 178,00 & 93.984,00  \\
-                Representantes do Negócio           & 15 & 198 & \gls{fundep}     & --     & --     & --         \\
-                Representantes do Negócio           & 15 & 198 & \gls{fiotec}     & --     & --     & --         \\
+                Coordenador de Projeto              & 1  & 80  & \gls{fundep}     & --     & --         \\
+                Subcoordenador de Projeto           & 1  & 528 & \gls{fiotec}     & --     & --         \\
+                Subcoordenador de Projeto           & 1  & 198 & \gls{fundep}     & --     & --         \\
+                Consultor Técnico Sênior            & 1  & 80  & Terceirizado & 400,00 & 32.000,00  \\
+                Product Owner / Analista de Negócio & 2  & 528 & \gls{fiotec}     & --     & --         \\
+                Product Owner / Analista de Negócio & 5  & 528 & Terceirizado & 168,00 & 443.520,00 \\
+                UX/UI Designer                      & 1  & 528 & Terceirizado & 135,00 & 71.280,00  \\
+                Arquiteto de Software               & 1  & 528 & \gls{fiotec}     & --     & --         \\
+                Arquiteto de Software               & 1  & 528 & Terceirizado & 200,00 & 105.600,00 \\
+                Documentador                        & 1  & 528 & Terceirizado & 178,00 & 93.984,00  \\
+                Representantes do Negócio           & 15 & 198 & \gls{fundep}     & --     & --         \\
+                Representantes do Negócio           & 15 & 198 & \gls{fiotec}     & --     & --         \\
                 \bottomrule
             \end{tabular}
         }
@@ -105,7 +105,7 @@
         \label{tab:carga-e-valores}
     \end{table}
 
-    O valor máximo estimado para esta fase inicial do projeto é de \textbf{R\$ 746.384,00}, correspondente ao custo direto da contratação de profissionais terceirizados conforme as funções e cargas horárias previstas.
+    O valor estimado para esta fase inicial do projeto é de \textbf{R\$ 746.384,00}, correspondente ao custo direto da contratação de profissionais terceirizados conforme as funções e cargas horárias previstas.
 
     \textbf{Não estão incluídos nesse valor encargos indiretos}, tais como administração, tributos, gestão contratual e eventuais despesas operacionais, que deverão ser definidos em tratativas futuras entre as partes envolvidas.
 
